--- a/T40_task1.vcxproj
+++ b/T40_task1.vcxproj
@@ -127,7 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Book.cpp" />
+    <ClCompile Include="Journal.cpp" />
+    <ClCompile Include="Publication.cpp" />
+    <ClCompile Include="SchoolBook.cpp" />
     <ClCompile Include="T40_task1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Book.h" />
+    <ClInclude Include="Journal.h" />
+    <ClInclude Include="Publication.h" />
+    <ClInclude Include="SchoolBook.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
