--- a/T40_task1.vcxproj
+++ b/T40_task1.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Book.cpp" />
     <ClCompile Include="Journal.cpp" />
+    <ClCompile Include="Library.cpp" />
     <ClCompile Include="Publication.cpp" />
     <ClCompile Include="SchoolBook.cpp" />
     <ClCompile Include="T40_task1.cpp" />
@@ -136,6 +137,7 @@
   <ItemGroup>
     <ClInclude Include="Book.h" />
     <ClInclude Include="Journal.h" />
+    <ClInclude Include="Library.h" />
     <ClInclude Include="Publication.h" />
     <ClInclude Include="SchoolBook.h" />
   </ItemGroup>
